discussion/kv_engine/179286/179286_rev14_discussion.txt
======================================================================================================================
DESCRIPTION:

Move the server interface class includes into a new directory

Change-Id: Id839ab6df2c61328a3a9d6915806f80f83695491

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-09-20 15:41:45.000000000
Message: 
Uploaded patch set 14.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-20 16:09:58.000000000
Message: 
Patch Set 14: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20509/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_iface/core.h:14:10: error: "memcached/types.h" file not found [clang-diagnostic-error]
#include <memcached/types.h>
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20509/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_iface/core.h:14:10:
error: "memcached/types.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20509/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23641/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23641/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22857/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22857/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30885/ : FAILURE

Failure of GoogleTest "MeteringTest/MeteringTest.TTL_Expiry_Get/UnmeteredByPrivilege":

<pre>
[ RUN      ] MeteringTest/MeteringTest.TTL_Expiry_Get/UnmeteredByPrivilege
[2022-09-20T15:49:16.442Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp_serverless/metering_test.cc:3071: Failure
[2022-09-20T15:49:16.442Z] Expected equality of these values:
[2022-09-20T15:49:16.442Z]   cb::mcbp::Status::KeyEnoent
[2022-09-20T15:49:16.442Z]     Which is: Not found
[2022-09-20T15:49:16.442Z]   rsp.getStatus()
[2022-09-20T15:49:16.442Z]     Which is: Success
[2022-09-20T15:49:16.442Z] should have been TTL expired
[2022-09-20T15:49:16.442Z] [  FAILED  ] MeteringTest/MeteringTest.TTL_Expiry_Get/UnmeteredByPrivilege, where GetParam() = 4-byte object <01-00 00-00> (148 ms)
MeteringTest/MeteringTest.TTL_Expiry_Get/UnmeteredByPrivilege
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30885/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19732/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49519/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41622/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10219/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22486/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21871/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10317/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
